--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.3.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.4.1</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
